# The-Fourth-Age_Client

./: .gitignore  CMakeLists.txt
engine/: time.h
engine/graphics/: camera.h  object.h
engine/graphics/loaders/: model.h  shader.h  texture.h
game/: game.h  gameobject.h
libs/: maths.c  maths.h  matrices.h  resourcemanager.c  resourcemanager.h
